# NoPo4D

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: main.yaml
config/dataset/: base_dataset.yaml  exo4d.yaml
config/dataset/view_sampler/: bounded_video.yaml
config/experiment/: exo4d_all_cam.yaml  exo4d_single_cam.yaml
config/loss/: depth_consis.yaml  distill.yaml  life_span.yaml  lpips.yaml  opacity.yaml  optical_flow.yaml  ssim.yaml
config/model/decoder/: decoder_4dgs.yaml
config/model/encoder/: nopo4d.yaml
scripts/dataset/: README.md  exo_utils.py  preprocess_exo.py  preprocess_exo.sh  sequences_test.txt  sequences_train.txt
src/: cfg.py  config.py  inference.py  train.py
src/dataset/: __init__.py  data_module.py  data_sampler.py  dataset.py  dataset_exo4d.py  types.py  utils.py
src/dataset/shims/: augmentation_shim.py  crop_shim.py  patch_shim.py
src/dataset/view_sampler/: __init__.py  view_sampler.py  view_sampler_bounded_video.py
src/model/: __init__.py  nopo4d.py  types.py
src/model/decoder/: __init__.py  config.py  decoder_4dgs.py  types.py
src/model/encoder/: __init__.py  config.py  encoder.py  types.py
src/training/: base_wrapper.py  config.py  model_wrapper.py  optimizer.py  training_wrapper.py  validation_wrapper.py
src/training/distillation/: __init__.py  distillation.py  distillation_base.py  distillation_geometry.py  types.py
src/training/logger/: metrics_logger.py  visualizer.py
src/training/loss/: __init__.py  loss.py  (+10 more)
src/utils/: distributed.py  geometry.py  image.py  misc.py  nn.py  pose.py  temporal.py
(+21 files in other folders)
