[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nopo4d"
version = "0.0.0"
description = "No Pose, No Problem in 4D: feed-forward dynamic Gaussians from unposed multi-view videos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0",
    "torchvision",
    "einops",
    "numpy<2",
    "huggingface_hub",
    "jaxtyping",
    "gsplat",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
